# CursorTest

./: .gitignore  Tapon-v3.60-BUG复盘总结.md  Test.cursorrules  bug_analysis_detail.json  bug_analysis_output.json  verify_excel.json
BUG/: 360-BugReview.md  EasyConnect_V3.6.0_Bug_ByFunction.md  EasyConnect_V3.6.0_Bug_Classification.md  EasyConnect_V3.6.0_Bug_FunctionClassification.md  EasyConnect_V3.6.0_Bug_Review.md  README.md  Tapon-v3.60-BUG复盘总结.md  Tapon项目缺陷复盘报告-202604.md
financial-agent-poc/: .gitignore  README.md  pyproject.toml
financial-agent-poc/config/: governance.yaml
financial-agent-poc/docs/poc/: 01-scope-and-acceptance.md  02-asset-audit-checklist.md  03-manual-baseline-template.md  asset-audit-summary.example.md  compliance-implementation.md  week12-expansion-roadmap.md  weekly-review-checklist.md
financial-agent-poc/docs/testcases/: multi_tenant_phase1.xmind  multi_tenant_phase1_xmind_import.md
financial-agent-poc/examples/requirements/: sample.md
financial-agent-poc/src/financial_agent_poc/: __init__.py  __main__.py  models.py  pipeline.py  reporting.py
financial-agent-poc/src/financial_agent_poc/agents/: __init__.py  case_gen_agent.py  parser_agent.py  result_judge_agent.py  scheduler_agent.py
financial-agent-poc/src/financial_agent_poc/compliance/: __init__.py  audit.py  cost_guard.py  desensitize.py  governance.py
financial-agent-poc/src/financial_agent_poc/executors/: __init__.py  api_runner.py  data_validator.py  ui_runner.py
financial-agent-poc/tests/: test_pipeline.py
financial-agent-poc/tools/: md_to_xmind.py
student/: main.py  (+13 more)
(+76 files in other folders)
