[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-agent-poc"
version = "0.1.0"
description = "PoC: financial structured product test agent minimal loop"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["PyYAML>=6.0.1"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
